# social-media-inference-bot

./: .env.example  .gitignore  DOCKER.md  DOCKER_SETUP.md  Dockerfile  README.md  analyze_tool_effectiveness.py  analyze_tool_usage.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  run.py  test_docker_setup.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  TROUBLESHOOTING.md
evaluation_results/: results.csv  results.json  tool_effectiveness_analysis.json  tool_usage_analysis.json
src/: __init__.py  cli.py
src/agents/: __init__.py  callbacks.py  context_manager.py  grok_client.py  orchestrator.py  replanning.py
src/config/: settings.py
src/data/: __init__.py  generator.py  loader.py  models.py
src/evaluation/: __init__.py  framework.py
src/tools/: __init__.py  registry.py  retrieval.py  vector_store.py
